# pulpo

./: .gitignore  .travis.yml  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  README.md  setup.cfg  setup.py
pulpo/: bandit_factory.py  pulpo.py
pulpo/bandits/: beta_thompson.py  dataclasses.py  epsilon_greedy.py  guassian_thompson.py  online_bandits.py
pulpo/constants/: fields.py
tests/: test_bandit_factory.py  test_pulpo.py
tests/bandits/: test_beta_thompson.py  test_epsilon_greedy.py  test_gaussian_thompson.py
