[metadata]
author = Pavlos Mitsoulis Ntompos, Fedor Alexandre Parfenov
author-email = p.mitsoulis@gmail.com
summary = Multi-Arm-Bandit library
classifier =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = multi-arm-bandit reinforcement-learning machine-learning aws
license = MIT
description-file = README.md

[bdist_wheel]
universal=1

[flake8]
max-line-length=150
exclude=.svn,CVS,.bzr,.hg,.git,__pycache__,.tox,.eggs,venv/,sagify/commands/__init__.py
